# ansible-home-network

./: .gitignore  .pre-commit-config.yaml  README.md  bootstrap.yaml  example.inventory.ini  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
config/templates/: domain.yaml  general.yaml  pihole.yaml  pki.yaml
roles/docker/tasks/: main.yaml
roles/pihole/handlers/: main.yaml
roles/pihole/tasks/: main.yaml
roles/pihole/templates/: docker-compose.yaml.j2
roles/pki/tasks/: main.yaml
roles/update/tasks/: main.yaml
roles/yubihsm/tasks/: main.yaml
